WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
63980
Calls on 32 bit machines are failed after
r90423
https://bugs.webkit.org/show_bug.cgi?id=63980
Summary
Calls on 32 bit machines are failed after r90423
Zoltan Herczeg
Reported
2011-07-06 00:31:44 PDT
Upload a fix.
Attachments
patch
(1.91 KB, patch)
2011-07-06 00:36 PDT
,
Zoltan Herczeg
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zoltan Herczeg
Comment 1
2011-07-06 00:36:48 PDT
Created
attachment 99799
[details]
patch
Oliver Hunt
Comment 2
2011-07-06 14:37:21 PDT
***
Bug 64007
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 3
2011-07-10 03:55:38 PDT
Did this ever get landed?
Neil
Comment 4
2011-07-10 05:33:14 PDT
working on
r90681
Balazs Kelemen
Comment 5
2011-07-10 08:05:43 PDT
(In reply to
comment #3
)
> Did this ever get landed?
Yes, it is:
http://trac.webkit.org/changeset/90443
Zoltan Herczeg
Comment 6
2011-07-10 08:07:51 PDT
Ooops sorry, I forgot to close the bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug