Calls on 32 bit machines are failed after r90423 https://bugs.webkit.org/show_bug.cgi?id=63980

Patch by Zoltan Herczeg <zherczeg@inf.u-szeged.hu> on 2011-07-06
Reviewed by Gavin Barraclough.

Copy the necessary lines from JITCall.cpp.

* jit/JITCall32_64.cpp:
(JSC::JIT::compileOpCall):



Canonical link: https://commits.webkit.org/79709@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@90443 268f45cc-cd09-0410-ab3c-d52691b4dbfc